tests/expectations/compiler/function/async_conditional.out
DCE_ENABLED:
Error [EPAR0370005]: expected 'import', 'program' -- found '*'
    --> compiler-test:1:1
     |
   1 | */
     | ^
DCE_DISABLED:
Error [EPAR0370005]: expected 'import', 'program' -- found '*'
    --> compiler-test:1:1
     |
   1 | */
     | ^